# packages/libs/registry-sdk/src/utils/generate-openapi.ts
@@ -6,11 +6,13 @@ import { OpenApiGeneratorV3 } from '@asteasolutions/zod-to-openapi';
 import { addToRegistry as addAbilityToRegistry } from '../lib/openApi/ability';
 import { addToRegistry as addAppToRegistry } from '../lib/openApi/app';
 import { registry } from '../lib/openApi/baseRegistry';
+import { addToRegistry as addPaymentDBToRegistry } from '../lib/openApi/paymentDB';
 import { addToRegistry as addPolicyToRegistry } from '../lib/openApi/policy';
 
 addAppToRegistry(registry);
 addAbilityToRegistry(registry);
 addPolicyToRegistry(registry);
+addPaymentDBToRegistry(registry);
 
 const generator = new OpenApiGeneratorV3(registry.definitions);
 
